overlapping fix

--- a/code/css/styles.css
+++ b/code/css/styles.css
@@ -64,6 +64,7 @@
 #dropdown {
     text-align: center;
     font-size: 17px;
+    margin-top: 30px;
 }
 
 #playerdropdown {
